<resources>
	<string name="app_name">TheMovieApp</string>
	<string name="placeholder_empty">No data</string>
	<string name="placeholder_offline">No connection</string>
	<string name="button_more_info">MORE INFO</string>
	<string name="action_search">Search</string>
	<string name="moviesToolbarTitle">Movies</string>
	<string name="actorsToolbarTitle">Actors</string>
	<string name="tab_popular_movies">POPULAR</string>
	<string name="tab_now_playing_movies">NOW PLAYING</string>
	<string name="movie_cover_image">Movie image</string>
	<string name="subheading_trailers">TRAILERS</string>
	<string name="trailer_video">trailer videos</string>
	<string name="subheading_gallery">GALLERY</string>
	<string name="gallery_image">images from the movie</string>
	<string name="subheading_cast">CAST</string>
	<string name="cast_list">list of the actors</string>
	<string name="full_cast_amp_crew"><![CDATA[FULL CAST & CREW]]></string>
	<string name="action_share">Share</string>
	<string name="action_favorite">Mark as favorite</string>
	<string name="menu_movies">Movies</string>
	<string name="menu_actors">Actors</string>
	<string name="menu_profile">Profile</string>
	<string name="actors_popular_title">POPULAR</string>
	<string name="actor_profile_image">Actor profile picture</string>
	<string name="actor_detail_known_for_title">KNOWN FOR</string>
	<string name="profile_favourite_films_title">FAVOURITE FILMS</string>
	<string name="action_logout">Logout</string>
	<string name="action_settings">Settings</string>
	<string name="profile_picture">Profile picture</string>
	<string name="sign_up">Sign Up</string>
	<string name="log_in">Log In</string>
	<string name="hint_username">Username</string>
	<string name="hint_email">Email</string>
	<string name="hint_password">Password</string>
	<string name="hint_confirm_password">Confirm Password</string>
	<string name="err_msg_required">Valid Input Required</string>
	<string name="err_msg_username">Please enter a valid Username</string>
	<string name="err_msg_email">Please enter a valid Email</string>
	<string name="err_msg_password">Please enter a valid Password</string>
	<string name="err_msg_confirm_password">Make sure to confirm your password</string>
	<string name="favorite_films">Favorite Films</string>
	<string name="action_edit">Edit</string>

	<string name="TMDB_BASE_IMAGE_W500">https://image.tmdb.org/t/p/w500</string>
	<string name="TMDB_BASE_IMAGE_W300">https://image.tmdb.org/t/p/w300</string>
	<string name="TMDB_BASE_IMAGE_W45">https://image.tmdb.org/t/p/w45</string>
	<string name="GRAVATAR_BASE_IMAGE">https://www.gravatar.com/avatar/</string>

	<string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>
	<string name="search_movie_hint">Search movie</string>

	<!--KeystoreCompat STRV lib-->
	<string name="kc_lock_screen_title">Custom lock screen title</string>
	<string name="kc_lock_screen_description">Custom lock screen description</string>
	<string name="kc_kitkat_admin_explanatory">"Custom explanatory, explain to the user, that your application needs DeviceAdmin rights. For API 19 (KitKat) only."</string>
	<string name="authenticating">Authenticating...</string>
	<string name="skip_log_in">Skip for now</string>
	<string name="need_to_be_logged_in">You need to be logged in</string>
	<string name="empty_favourites">You don\'t have any favourite movies yet</string>
</resources>
