<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">

	<data>
		<variable
			name="viewModel" type="com.strvacademy.drabekj.moviestrv.moviedetailscreen.MovieDetailViewModel" />
		<variable
			name="view" type="com.strvacademy.drabekj.moviestrv.moviedetailscreen.MovieDetailView" />
	</data>

	<org.alfonz.view.StatefulLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		app:progressLayout="@layout/placeholder_progress"
		app:offlineLayout="@layout/placeholder_offline"
		app:emptyLayout="@layout/placeholder_empty"
		app:state="@{viewModel.state}">

		<android.support.design.widget.CoordinatorLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent">


			<android.support.design.widget.AppBarLayout
				style="@style/MyToolbarHigh"
				android:elevation="0dp"
				android:layout_height="@dimen/movie_detail_toolbar_height_expanded"
				android:background="@color/colorSecondary">

				<android.support.design.widget.CollapsingToolbarLayout
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					app:layout_scrollFlags="scroll|exitUntilCollapsed"
					app:expandedTitleTextAppearance="@style/MyToolbar.Expanded"
					app:collapsedTitleTextAppearance="@color/colorPrimaryText">

					<RelativeLayout
						android:layout_width="match_parent"
						android:layout_height="wrap_content">

						<ImageView
							android:id="@+id/image_movie_detail_cover"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:adjustViewBounds="true"
							android:src="@drawable/dummy_movie_detail"
							android:contentDescription="@string/movie_cover_image"
							app:layout_collapseMode="parallax"
							app:layout_collapseParallaxMultiplier="0.7" />

						<ImageView
							android:layout_width="match_parent"
							android:layout_height="220dp"
							android:src="@drawable/shape_gradient"
							android:layout_alignBottom="@+id/image_movie_detail_cover"
							android:layout_alignParentStart="true" />
					</RelativeLayout>


					<android.support.v7.widget.Toolbar
						android:id="@+id/toolbar"
						style="@style/MyToolbar"
						android:background="@android:color/transparent"
						app:layout_collapseMode="pin"
						app:title="@{viewModel.movie.name}"
						app:titleTextColor="@color/colorPrimaryText" />

				</android.support.design.widget.CollapsingToolbarLayout>
			</android.support.design.widget.AppBarLayout>


			<android.support.v4.widget.NestedScrollView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				app:layout_behavior="@string/appbar_scrolling_view_behavior">

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="vertical">

					<LinearLayout
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_margin="@dimen/global_spacing_16"
						android:orientation="vertical">

						<TextView
							android:id="@+id/text_detail_subheading"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:text='@{String.format("%s, %s", viewModel.movie.director, viewModel.movie.releaseDate)}'
							style="@style/SecondaryText" />

						<TextView
							android:id="@+id/text_detail_description"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:layout_marginTop="@dimen/global_spacing_16"
							android:text="@{viewModel.movie.description}"
							style="@style/SecondaryText" />

					</LinearLayout>

					<View
						android:layout_width="fill_parent"
						android:layout_height="1dip"
						android:background="@color/colorLightGrey" />

					<!-- TRAILERS -->
					<LinearLayout
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_margin="@dimen/global_spacing_16"
						android:orientation="vertical">

						<TextView
							android:id="@+id/text_subheading_trailers"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:text="@string/subheading_trailers"
							style="@style/SecondaryHeadingText" />

						<ImageView
							android:layout_width="150dp"
							android:layout_height="120dp"
							android:contentDescription="@string/trailer_video" />

					</LinearLayout>

					<View
						android:layout_width="fill_parent"
						android:layout_height="1dip"
						android:background="@color/colorLightGrey" />

					<!-- GALLERY -->
					<LinearLayout
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_margin="@dimen/global_spacing_16"
						android:orientation="vertical">

						<TextView
							android:id="@+id/text_subheading_gallery"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:text="@string/subheading_gallery"
							style="@style/SecondaryHeadingText" />

						<ImageView
							android:layout_width="150dp"
							android:layout_height="200dp"
							android:contentDescription="@string/gallery_image" />

					</LinearLayout>

					<View
						android:layout_width="fill_parent"
						android:layout_height="1dip"
						android:background="@color/colorLightGrey" />

					<!-- CAST -->
					<LinearLayout
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_margin="@dimen/global_spacing_16"
						android:orientation="vertical">

						<TextView
							android:id="@+id/text_subheading_cast"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:text="@string/subheading_cast"
							style="@style/SecondaryHeadingText" />

						<ImageView
							android:layout_width="150dp"
							android:layout_height="280dp"
							android:contentDescription="@string/cast_list" />

						<Button
							android:id="@+id/button_detail_full_cast"
							android:text="@string/full_cast_amp_crew"
							android:onClick="@{() -> view.onFullCastClick()}"
							style="@style/ViewAllButton" />

					</LinearLayout>

					<View
						android:layout_width="fill_parent"
						android:layout_height="1dip"
						android:background="@color/colorLightGrey" />

				</LinearLayout>

			</android.support.v4.widget.NestedScrollView>

		</android.support.design.widget.CoordinatorLayout>

	</org.alfonz.view.StatefulLayout>

</layout>