<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

	<data>
		<variable
			name="view" type="com.strvacademy.drabekj.movieapp.ui.login.LoginView" />
		<variable
			name="viewModel" type="com.strvacademy.drabekj.movieapp.ui.login.LoginViewModel" />
	</data>


	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:background="@color/colorSecondary">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_alignParentTop="true"
			android:orientation="vertical">

			<android.support.design.widget.TextInputLayout
				android:id="@+id/signup_input_layout_username"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				style="@style/MyTextInput">

				<EditText
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:inputType="text"
					android:hint="@string/hint_username"
					android:text="@={viewModel.username}" />
			</android.support.design.widget.TextInputLayout>

			<android.support.design.widget.TextInputLayout
				android:id="@+id/signup_input_layout_password"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				style="@style/MyTextInput">

				<EditText
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:inputType="textPassword"
					android:hint="@string/hint_password"
					android:text="@={viewModel.password}" />
			</android.support.design.widget.TextInputLayout>
		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_alignParentBottom="true"
			android:orientation="vertical">

			<Button
				android:layout_width="@dimen/large_btn_width"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:layout_marginBottom="40dp"
				android:background="@drawable/shape_auth_btn_solid"
				android:textColor="@color/colorPrimary"
				android:text="@string/log_in"
				android:onClick="@{() -> view.onLogInClick()}"/>
		</LinearLayout>
	</RelativeLayout>
</layout>